[package]
name = "rust-samples"
version = "0.1.0"
authors = ["smuralee <suraj@surajmuraleedharan.com>"]
edition = "2018"
default-run = "basics"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "basics"
path = "src/basics/main.rs"

[[bin]]
name = "ownership"
path = "src/ownership/main.rs"

[dependencies]
